Minor changes to support folder structure

--- a/model/v1/artifacts/test_ner.ipynb
+++ b/model/v1/artifacts/test_ner.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eCleaner import clean_result\n",
+    "from cleaner import clean_result\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.DataFrame(columns=['Text', 'Entities'])"
@@ -44,7 +44,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['сотрудниках компании', 'должностях.', 'Сотрудники', 'Должности\"', 'Сотрудники', 'сотрудниках']\n",
+      "['студентах', 'курсах.', 'Студенты', 'Курсы', 'курса', 'курса', 'Студенты', 'Курсы', 'студентах', 'курсах.']\n",
+      "['товары', 'изделие', 'изделие', 'изделие', 'заказчикам\\n', 'договорам.', 'товара', 'ТОВАРОВ', 'ТОВАРАХ', 'товара', 'товара', 'товара', 'ЗАКАЗАХ на поставку', 'товаров', 'заказа', 'заказчика', 'заказчика', 'договора', 'договора', 'товара', 'товаров', 'отгрузки', 'заказа', 'отгрузки', 'товара', 'товар', 'заказов на поставку', 'Заказ', 'товару;', 'товару', 'отгрузок.', 'товаров.', 'товар', 'заказ.', 'заказу', 'товар;', 'товар', 'заказчику.', 'отгрузка', 'товару.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for task in test_data:\n",
+    "    doc = model(task)\n",
+    "    target_list = list(map(lambda _:_.text, doc.ents))\n",
+    "    print(target_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,12 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()\n",
-    "df.to_excel('extracted.xlsx')"
+    "# df.head()\n",
+    "# df.to_excel('result/extracted.xlsx')"
    ]
   }
  ],
