--- a/model/v1/artifacts/train_ner.ipynb
+++ b/model/v1/artifacts/train_ner.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "!python -m spacy init fill-config base_config.cfg config.cfg"
+    "!python -m spacy init fill-config config/base_config.cfg config/config.cfg"
    ]
   },
   {
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "ds_data = json.load(open('annotations_learn.json','r'))\n",
+    "ds_data = json.load(open('train/annotations_learn.json','r'))\n",
     "len(ds_data)"
    ]
   },
@@ -131,20 +131,11 @@
     }
    ],
    "source": [
-    "with open('trained/train_file.txt', 'w+') as wfile:\n",
+    "with open('train/train_file.txt', 'w+') as wfile:\n",
     "    db = get_spacy_doc(wfile, train)\n",
-    "    db.to_disk('trained/train_data.spacy')\n",
+    "    db.to_disk('train/train_data.spacy')\n",
     "    db = get_spacy_doc(wfile, test)\n",
-    "    db.to_disk('trained/test_data.spacy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers.tokenization_utils import BatchEncoding"
+    "    db.to_disk('train/test_data.spacy')"
    ]
   },
   {
@@ -274,15 +265,8 @@
     }
    ],
    "source": [
-    "!python -m spacy train config.cfg --paths.train trained/train_data.spacy  --paths.dev trained/test_data.spacy --gpu-id 0 --output trained"
+    "!python -m spacy train config/config.cfg --paths.train train/train_data.spacy  --paths.dev train/test_data.spacy --gpu-id 0 --output trained"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
