feat: Pipelined model initial implementation
- Implemented class for a pipelined model, combined out of trained ner, rel, ecat and pretrained lemmatizer components.
- Implemented some of required scripts and classes for postprocessing model results.

--- a/model/v2/scripts/model/test_model.ipynb
+++ b/model/v2/scripts/model/test_model.ipynb
@@ -6,13 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
-    "from model.components.component_registry import *"
+    "from model.PipelineModel import PipelineModel"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../../data/test/test1.txt\") as file:\n",
+    "    test_text = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,47 +38,154 @@
     }
    ],
    "source": [
-    "nlp = spacy.load('../../model/training/ecat/model-best')\n",
-    "\n",
-    "with open('../../data/test/test1.txt', 'r') as test_file:\n",
-    "    example = test_file.read()"
+    "pipeline = PipelineModel(config_path=\"model/config/pipeline_config.yml\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = pipeline.apply(test_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ents: (заказах, товарах, клиентах, поставщиках, поставщиками, заказах, номер заказа, дата заказа, статус заказа, сумма заказа, имя, контактные данные клиента, адрес доставки, товарах, уникальный идентификатор товара, название товара, описание товара, стоимость товара, количество товара на складе, поставщик товара, клиентах, уникальный идентификатор клиента, имя клиента, адрес клиента, контактные данные клиента, поставщиках, уникальный идентификатор поставщика, название поставщика, адрес поставщика, контактные данные поставщика, поставщиками, заказах, поставщиков, заказах, поставщиков, статуса заказа, возможность просмотра истории изменений статуса заказа)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'spacy.tokens.doc.Doc' object has no attribute 'rel'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[26], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m doc \u001b[38;5;241m=\u001b[39m nlp(example)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ments: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoc\u001b[38;5;241m.\u001b[39ments\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdoc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrel\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# for ent in doc.ents:\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#     print(f'txt: {ent.text}, label: {ent.label_}')\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# for rel in doc['tokens']:\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#     print(f'rel: {rel}')\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# print(f'rels: {doc._.rel}')\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'spacy.tokens.doc.Doc' object has no attribute 'rel'"
+      "заказах LENTITY 38 39 заказ\n",
+      "товарах LENTITY 40 41 товар\n",
+      "клиентах LENTITY 42 43 клиент\n",
+      "поставщиках LENTITY 44 45 поставщик\n",
+      "заказах LENTITY 71 72 заказ\n",
+      "номер заказа LATTRIBUTE 73 75 номер заказ\n",
+      "дата заказа LATTRIBUTE 76 78 дата заказ\n",
+      "статус заказа LATTRIBUTE 79 81 статус заказ\n",
+      "сумма заказа LATTRIBUTE 89 91 сумма заказ\n",
+      "имя и контактные данные клиента LATTRIBUTE 92 97 имя и контактный данные клиент\n",
+      "адрес доставки LATTRIBUTE 98 100 адрес доставка\n",
+      "товарах LENTITY 104 105 товар\n",
+      "идентификатор товара LATTRIBUTE 107 109 идентификатор товар\n",
+      "название товара LATTRIBUTE 110 112 название товар\n",
+      "описание товара LATTRIBUTE 113 115 описание товар\n",
+      "стоимость товара LATTRIBUTE 116 118 стоимость товар\n",
+      "количество товара на складе LATTRIBUTE 119 123 количество товар на склад\n",
+      "поставщик товара LATTRIBUTE 124 126 поставщик товар\n",
+      "клиентах LENTITY 130 131 клиент\n",
+      "идентификатор клиента LATTRIBUTE 133 135 идентификатор клиент\n",
+      "имя клиента LATTRIBUTE 136 138 имя клиент\n",
+      "адрес клиента LATTRIBUTE 139 141 адрес клиент\n",
+      "контактные данные клиента LATTRIBUTE 142 145 контактный данные клиент\n",
+      "поставщиках LENTITY 155 156 поставщик\n",
+      "идентификатор поставщика LATTRIBUTE 158 160 идентификатор поставщик\n",
+      "название поставщика LATTRIBUTE 161 163 название поставщик\n",
+      "адрес поставщика LATTRIBUTE 164 166 адрес поставщик\n",
+      "контактные данные поставщика LATTRIBUTE 167 170 контактный данные поставщик\n",
+      "поставщиками LENTITY 174 175 поставщик\n",
+      "заказах от поставщиков LENTITY 179 182 заказ от поставщик\n",
+      "заказах от поставщиков LENTITY 186 189 заказ от поставщик\n",
+      "заказа LENTITY 194 195 заказ\n"
      ]
     }
    ],
    "source": [
-    "doc = nlp(example)\n",
-    "# print(f'ents: {doc.ents}')\n",
-    "# print(doc._.rel.items())\n",
-    "print(doc._.ecat.items())\n",
-    "# for ent in doc.ents:\n",
-    "#     print(f'txt: {ent.text}, label: {ent.label_}')\n",
-    "# for rel in doc['tokens']:\n",
-    "#     print(f'rel: {rel}')\n",
-    "\n",
-    "# print(f'rels: {doc._.rel}')"
+    "for ent in result.ents:\n",
+    "    print(ent.text, ent.label_, ent.start, ent.end, ent.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " entities: ('заказах', 'номер заказа') --> predicted relation: {'ATTRIBUTE_OF': 0.9955764, 'DESCRIBED_BY': 2.900583e-05}\n",
+      " entities: ('заказах', 'дата заказа') --> predicted relation: {'ATTRIBUTE_OF': 0.9974591, 'DESCRIBED_BY': 4.054567e-05}\n",
+      " entities: ('заказах', 'статус заказа') --> predicted relation: {'ATTRIBUTE_OF': 0.9986045, 'DESCRIBED_BY': 3.783513e-05}\n",
+      " entities: ('заказах', 'сумма заказа') --> predicted relation: {'ATTRIBUTE_OF': 0.9962339, 'DESCRIBED_BY': 3.2036878e-05}\n",
+      " entities: ('номер заказа', 'заказах') --> predicted relation: {'ATTRIBUTE_OF': 0.996238, 'DESCRIBED_BY': 2.731412e-05}\n",
+      " entities: ('дата заказа', 'заказах') --> predicted relation: {'ATTRIBUTE_OF': 0.9979486, 'DESCRIBED_BY': 3.44993e-05}\n",
+      " entities: ('статус заказа', 'заказах') --> predicted relation: {'ATTRIBUTE_OF': 0.9988826, 'DESCRIBED_BY': 3.435445e-05}\n",
+      " entities: ('сумма заказа', 'заказах') --> predicted relation: {'ATTRIBUTE_OF': 0.99727076, 'DESCRIBED_BY': 3.754521e-05}\n",
+      " entities: ('сумма заказа', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.99819523, 'DESCRIBED_BY': 9.3155264e-05}\n",
+      " entities: ('имя и контактные данные клиента', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9990722, 'DESCRIBED_BY': 0.00012171063}\n",
+      " entities: ('адрес доставки', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9767352, 'DESCRIBED_BY': 9.600478e-05}\n",
+      " entities: ('товарах', 'сумма заказа') --> predicted relation: {'ATTRIBUTE_OF': 0.99784803, 'DESCRIBED_BY': 8.400133e-05}\n",
+      " entities: ('товарах', 'имя и контактные данные клиента') --> predicted relation: {'ATTRIBUTE_OF': 0.9989681, 'DESCRIBED_BY': 0.00011659781}\n",
+      " entities: ('товарах', 'адрес доставки') --> predicted relation: {'ATTRIBUTE_OF': 0.9743706, 'DESCRIBED_BY': 0.00010493519}\n",
+      " entities: ('товарах', 'идентификатор товара') --> predicted relation: {'ATTRIBUTE_OF': 0.99918336, 'DESCRIBED_BY': 4.3984946e-05}\n",
+      " entities: ('товарах', 'название товара') --> predicted relation: {'ATTRIBUTE_OF': 0.996766, 'DESCRIBED_BY': 9.692833e-05}\n",
+      " entities: ('товарах', 'описание товара') --> predicted relation: {'ATTRIBUTE_OF': 0.9958359, 'DESCRIBED_BY': 9.021352e-05}\n",
+      " entities: ('товарах', 'стоимость товара') --> predicted relation: {'ATTRIBUTE_OF': 0.99335563, 'DESCRIBED_BY': 9.816098e-05}\n",
+      " entities: ('товарах', 'количество товара на складе') --> predicted relation: {'ATTRIBUTE_OF': 0.9733191, 'DESCRIBED_BY': 9.551842e-05}\n",
+      " entities: ('товарах', 'поставщик товара') --> predicted relation: {'ATTRIBUTE_OF': 0.9314224, 'DESCRIBED_BY': 7.35832e-05}\n",
+      " entities: ('идентификатор товара', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9992348, 'DESCRIBED_BY': 5.2519634e-05}\n",
+      " entities: ('название товара', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9967727, 'DESCRIBED_BY': 0.00010474914}\n",
+      " entities: ('название товара', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.9996507, 'DESCRIBED_BY': 8.925873e-05}\n",
+      " entities: ('описание товара', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9960975, 'DESCRIBED_BY': 0.00010657989}\n",
+      " entities: ('описание товара', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.99957746, 'DESCRIBED_BY': 9.0818765e-05}\n",
+      " entities: ('стоимость товара', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.99334335, 'DESCRIBED_BY': 0.000117771895}\n",
+      " entities: ('стоимость товара', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.9992774, 'DESCRIBED_BY': 0.000100355835}\n",
+      " entities: ('количество товара на складе', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.9740427, 'DESCRIBED_BY': 0.000100971134}\n",
+      " entities: ('количество товара на складе', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.99713254, 'DESCRIBED_BY': 8.603937e-05}\n",
+      " entities: ('поставщик товара', 'товарах') --> predicted relation: {'ATTRIBUTE_OF': 0.934119, 'DESCRIBED_BY': 7.741259e-05}\n",
+      " entities: ('поставщик товара', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.992447, 'DESCRIBED_BY': 6.596439e-05}\n",
+      " entities: ('клиентах', 'название товара') --> predicted relation: {'ATTRIBUTE_OF': 0.9996445, 'DESCRIBED_BY': 8.325784e-05}\n",
+      " entities: ('клиентах', 'описание товара') --> predicted relation: {'ATTRIBUTE_OF': 0.999542, 'DESCRIBED_BY': 7.748998e-05}\n",
+      " entities: ('клиентах', 'стоимость товара') --> predicted relation: {'ATTRIBUTE_OF': 0.9992675, 'DESCRIBED_BY': 8.431664e-05}\n",
+      " entities: ('клиентах', 'количество товара на складе') --> predicted relation: {'ATTRIBUTE_OF': 0.9970047, 'DESCRIBED_BY': 8.204676e-05}\n",
+      " entities: ('клиентах', 'поставщик товара') --> predicted relation: {'ATTRIBUTE_OF': 0.99199545, 'DESCRIBED_BY': 6.320502e-05}\n",
+      " entities: ('клиентах', 'идентификатор клиента') --> predicted relation: {'ATTRIBUTE_OF': 0.99519145, 'DESCRIBED_BY': 1.6379017e-05}\n",
+      " entities: ('клиентах', 'имя клиента') --> predicted relation: {'ATTRIBUTE_OF': 0.97671914, 'DESCRIBED_BY': 2.6407684e-05}\n",
+      " entities: ('клиентах', 'адрес клиента') --> predicted relation: {'ATTRIBUTE_OF': 0.97941166, 'DESCRIBED_BY': 2.7660282e-05}\n",
+      " entities: ('клиентах', 'контактные данные клиента') --> predicted relation: {'ATTRIBUTE_OF': 0.9769275, 'DESCRIBED_BY': 2.5929843e-05}\n",
+      " entities: ('идентификатор клиента', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.99534976, 'DESCRIBED_BY': 1.8551642e-05}\n",
+      " entities: ('имя клиента', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.9751404, 'DESCRIBED_BY': 3.5759087e-05}\n",
+      " entities: ('адрес клиента', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.9787531, 'DESCRIBED_BY': 3.695381e-05}\n",
+      " entities: ('контактные данные клиента', 'клиентах') --> predicted relation: {'ATTRIBUTE_OF': 0.9779012, 'DESCRIBED_BY': 3.322547e-05}\n",
+      " entities: ('поставщиках', 'идентификатор поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.9871409, 'DESCRIBED_BY': 1.2422236e-05}\n",
+      " entities: ('поставщиках', 'название поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.96046454, 'DESCRIBED_BY': 2.5504805e-05}\n",
+      " entities: ('поставщиках', 'адрес поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.9593602, 'DESCRIBED_BY': 2.870895e-05}\n",
+      " entities: ('поставщиках', 'контактные данные поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.96068287, 'DESCRIBED_BY': 2.7015893e-05}\n",
+      " entities: ('поставщиках', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 1.0, 'DESCRIBED_BY': 1.3364622e-05}\n",
+      " entities: ('идентификатор поставщика', 'поставщиках') --> predicted relation: {'ATTRIBUTE_OF': 0.98888624, 'DESCRIBED_BY': 1.2214835e-05}\n",
+      " entities: ('идентификатор поставщика', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.9344918, 'DESCRIBED_BY': 1.0808094e-05}\n",
+      " entities: ('название поставщика', 'поставщиках') --> predicted relation: {'ATTRIBUTE_OF': 0.9647909, 'DESCRIBED_BY': 2.5457466e-05}\n",
+      " entities: ('название поставщика', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.8145795, 'DESCRIBED_BY': 2.2525674e-05}\n",
+      " entities: ('адрес поставщика', 'поставщиках') --> predicted relation: {'ATTRIBUTE_OF': 0.9627586, 'DESCRIBED_BY': 2.8529745e-05}\n",
+      " entities: ('адрес поставщика', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.80562353, 'DESCRIBED_BY': 2.5244119e-05}\n",
+      " entities: ('контактные данные поставщика', 'поставщиках') --> predicted relation: {'ATTRIBUTE_OF': 0.9640444, 'DESCRIBED_BY': 2.639069e-05}\n",
+      " entities: ('контактные данные поставщика', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.8112712, 'DESCRIBED_BY': 2.3351424e-05}\n",
+      " entities: ('поставщиками', 'поставщиках') --> predicted relation: {'ATTRIBUTE_OF': 1.0, 'DESCRIBED_BY': 1.4256691e-05}\n",
+      " entities: ('поставщиками', 'идентификатор поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.9342909, 'DESCRIBED_BY': 1.1725297e-05}\n",
+      " entities: ('поставщиками', 'название поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.8181712, 'DESCRIBED_BY': 2.4073874e-05}\n",
+      " entities: ('поставщиками', 'адрес поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.8138624, 'DESCRIBED_BY': 2.709828e-05}\n",
+      " entities: ('поставщиками', 'контактные данные поставщика') --> predicted relation: {'ATTRIBUTE_OF': 0.8190273, 'DESCRIBED_BY': 2.5500185e-05}\n",
+      " entities: ('поставщиками', 'заказах от поставщиков') --> predicted relation: {'ATTRIBUTE_OF': 0.98156595, 'DESCRIBED_BY': 1.780042e-05}\n",
+      " entities: ('поставщиками', 'заказах от поставщиков') --> predicted relation: {'ATTRIBUTE_OF': 0.8660832, 'DESCRIBED_BY': 1.7934672e-05}\n",
+      " entities: ('поставщиками', 'заказа') --> predicted relation: {'ATTRIBUTE_OF': 1.0, 'DESCRIBED_BY': 1.2182006e-05}\n",
+      " entities: ('заказах от поставщиков', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.9797422, 'DESCRIBED_BY': 1.4102147e-05}\n",
+      " entities: ('заказах от поставщиков', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 0.85989255, 'DESCRIBED_BY': 1.4484915e-05}\n",
+      " entities: ('заказа', 'поставщиками') --> predicted relation: {'ATTRIBUTE_OF': 1.0, 'DESCRIBED_BY': 1.717137e-05}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value, rel_dict in result._.rel.items():\n",
+    "    for e in result.ents:\n",
+    "        for b in result.ents:\n",
+    "            if e.start == value[0] and b.start == value[1]:\n",
+    "                if rel_dict['ATTRIBUTE_OF'] >=0.8:\n",
+    "                    print(f\" entities: {e.text, b.text} --> predicted relation: {rel_dict}\")"
    ]
   }
  ],
