feat: Imrovements of postprocessing components
- Implemented ShapeShifter component to better adapt word forms.
- Improved JSON serialization.
- Added threshold for choosing entity category, default set to 'string' (if score is lower than threshold).

--- a/model/v2/scripts/model/test_model.ipynb
+++ b/model/v2/scripts/model/test_model.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "'[{\"_name\": \"заказах\", \"_attributes\": [{\"_name\": \"номер заказа\", \"_type\": \"integer\"}, {\"_name\": \"дата заказа\", \"_type\": \"timestamp\"}, {\"_name\": \"статус заказа\", \"_type\": \"string\"}, {\"_name\": \"сумма заказа\", \"_type\": \"double\"}]}, {\"_name\": \"товарах\", \"_attributes\": [{\"_name\": \"сумма заказа\", \"_type\": \"double\"}, {\"_name\": \"имя и контактные данные клиента\", \"_type\": \"string\"}, {\"_name\": \"адрес доставки\", \"_type\": \"string\"}, {\"_name\": \"идентификатор товара\", \"_type\": \"integer\"}, {\"_name\": \"название товара\", \"_type\": \"string\"}, {\"_name\": \"описание товара\", \"_type\": \"string\"}, {\"_name\": \"стоимость товара\", \"_type\": \"double\"}, {\"_name\": \"количество товара на складе\", \"_type\": \"integer\"}, {\"_name\": \"поставщик товара\", \"_type\": \"timestamp\"}]}, {\"_name\": \"клиентах\", \"_attributes\": [{\"_name\": \"название товара\", \"_type\": \"string\"}, {\"_name\": \"описание товара\", \"_type\": \"string\"}, {\"_name\": \"стоимость товара\", \"_type\": \"double\"}, {\"_name\": \"количество товара на складе\", \"_type\": \"integer\"}, {\"_name\": \"поставщик товара\", \"_type\": \"timestamp\"}, {\"_name\": \"идентификатор клиента\", \"_type\": \"integer\"}, {\"_name\": \"имя клиента\", \"_type\": \"string\"}, {\"_name\": \"адрес клиента\", \"_type\": \"string\"}, {\"_name\": \"контактные данные клиента\", \"_type\": \"string\"}]}, {\"_name\": \"поставщиках\", \"_attributes\": [{\"_name\": \"идентификатор поставщика\", \"_type\": \"integer\"}, {\"_name\": \"название поставщика\", \"_type\": \"string\"}, {\"_name\": \"адрес поставщика\", \"_type\": \"string\"}, {\"_name\": \"контактные данные поставщика\", \"_type\": \"string\"}]}]'"
+       "'[{\"name\": \"заказы\", \"attributes\": [{\"name\": \"номер заказа\", \"type\": \"integer\"}, {\"name\": \"дата заказа\", \"type\": \"timestamp\"}, {\"name\": \"статус заказа\", \"type\": \"string\"}, {\"name\": \"сумма заказа\", \"type\": \"double\"}]}, {\"name\": \"товары\", \"attributes\": [{\"name\": \"сумма заказа\", \"type\": \"double\"}, {\"name\": \"имя и контактные данные клиента\", \"type\": \"string\"}, {\"name\": \"адрес доставки\", \"type\": \"string\"}, {\"name\": \"идентификатор товара\", \"type\": \"integer\"}, {\"name\": \"название товара\", \"type\": \"string\"}, {\"name\": \"описание товара\", \"type\": \"string\"}, {\"name\": \"стоимость товара\", \"type\": \"double\"}, {\"name\": \"количество товара на склад\", \"type\": \"integer\"}, {\"name\": \"поставщик товара\", \"type\": \"string\"}]}, {\"name\": \"клиенты\", \"attributes\": [{\"name\": \"название товара\", \"type\": \"string\"}, {\"name\": \"описание товара\", \"type\": \"string\"}, {\"name\": \"стоимость товара\", \"type\": \"double\"}, {\"name\": \"количество товара на склад\", \"type\": \"integer\"}, {\"name\": \"поставщик товара\", \"type\": \"string\"}, {\"name\": \"идентификатор клиента\", \"type\": \"integer\"}, {\"name\": \"имя клиента\", \"type\": \"string\"}, {\"name\": \"адрес клиента\", \"type\": \"string\"}, {\"name\": \"контактные данные клиента\", \"type\": \"string\"}]}, {\"name\": \"поставщики\", \"attributes\": [{\"name\": \"идентификатор поставщика\", \"type\": \"integer\"}, {\"name\": \"название поставщика\", \"type\": \"string\"}, {\"name\": \"адрес поставщика\", \"type\": \"string\"}, {\"name\": \"контактные данные поставщика\", \"type\": \"string\"}]}]'"
       ]
      },
      "execution_count": 5,
@@ -88,6 +88,34 @@
     "#                     cnt += 1\n",
     "#                     print(f\" entities: {e.text, b.text} --> predicted relation: {rel_dict}\")\n",
     "# print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from scripts.data_processing.postprocessing.span_shapeshifter import ShapeShifter\n",
+    "\n",
+    "# shifter = ShapeShifter()\n",
+    "\n",
+    "# shifter.shapeshift(\"имя и контактные данные клиента\", True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from pymorphy3 import MorphAnalyzer\n",
+    "\n",
+    "# morph = MorphAnalyzer()\n",
+    "\n",
+    "# gramm = morph.parse(\"данные\")[3]\n",
+    "# new_gramm = gramm.inflect({'sing'})\n",
+    "# print(gramm, new_gramm)"
    ]
   }
  ],
